[project]
name = "api-toolkit-common"
version = "0.1.0"
description = "Redis cache, limiters, and response validators for API clients."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["redis>=4.5.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
